Sensitivity analysis: report multi-component loadflow status
Address current limitations of the sensitivity analysis result writer:
- No support for multi-component computation (could not report when a
  base simulation succeeded on one component but failed on another)
- No indication of the cause of a failure to compute a contingency,
  unlike what is reported for a load flow run
- No indication whether a result is complete or only partial when the
  computation has been canceled or interrupted

Add a LoadFlowStatus record to SensitivityAnalysisResult, augment the
contingency status with a per-component loadflow status list, extend
SensitivityResultWriter with synchronous-component-status reporting and
a computationComplete() lifecycle hook, and update Csv/Json/Model
writers and tests accordingly.

Signed-off-by: Fabrice Buscaylet <fabrice.buscaylet@artelys.com>

Fix

Signed-off-by: Bertrand Rix <bertrand.rix@artelys.com>

Try applying review suggestions

Signed-off-by: Bertrand Rix <bertrand.rix@artelys.com>

Clean

Signed-off-by: Bertrand Rix <bertrand.rix@artelys.com>

Require non null

Signed-off-by: Bertrand Rix <bertrand.rix@artelys.com>

Style

Signed-off-by: Bertrand Rix <bertrand.rix@artelys.com>

Correctly deprecate API

Signed-off-by: Bertrand Rix <bertrand.rix@artelys.com>

Javadoc

Signed-off-by: Bertrand Rix <bertrand.rix@artelys.com>

Clean

Signed-off-by: Bertrand Rix <bertrand.rix@artelys.com>

Computation complete in results. Also add methods/constructor to reduce verbosity

Signed-off-by: Bertrand Rix <bertrand.rix@artelys.com>